--- a/README
+++ b/README
@@ -1,9 +1,1 @@
-Dit is de readme
-
-Oh die Menno Veen wat een vent.
-
-O die Venno meen, vat een went.
-
-*Nog iets grappigs*
-
-8========D
+Readme Incognito Robot
