Bots krijgen nu de huidige gebruiker mee.

--- a/README
+++ b/README
@@ -1,5 +1,4 @@
 Readme Incognito Robot
 
 Jars toevoegen
-1. RMB -> Build Path -> Add To BuildPath
-
+1. RMB op lib/*.jar -> Build Path -> Add To BuildPath
