--- a/README
+++ b/README
@@ -2,3 +2,7 @@ Readme Incognito Robot
 
 Jars toevoegen
 1. RMB op lib/*.jar -> Build Path -> Add To BuildPath
+
+JPL native library
+1. RMB op Referenced Libraries/jpl.jar -> Properties -> Native Library
+2. Voeg een pad in gelijkend aan /opt/local/lib/swipl-5.10.4/lib/i386-darwin10.7.0
