--- a/README
+++ b/README
@@ -5,4 +5,5 @@ Jars toevoegen
 
 JPL native library
 1. RMB op Referenced Libraries/jpl.jar -> Properties -> Native Library
-2. Voeg een pad in gelijkend aan /opt/local/lib/swipl-5.10.4/lib/i386-darwin10.7.0
+2. (Mac?) Voeg een pad in gelijkend aan /opt/local/lib/swipl-5.10.4/lib/i386-darwin10.7.0
+2. (Voor Windows:) voeg C:\Program Files\pl\bin toe aan je PATH, reboot
