Eerste bot met processing is een feit, meer proof-of-concept dan werkbare bot nog, maar he. Het wachten is op werkende openCV.

--- a/README
+++ b/README
@@ -22,3 +22,6 @@ Vervolgens gaat Menno (Zie mennov1/MennoV1.java) het bestand Hogerlager.java zoe
 Vanaf dat moment krijgt Hogerlager alle berichten die je (in dit geval) in de terminal zegt.
 Zeg je nu "Zullen we hoger lager spelen?", dan reageert de bot hierop. 
 De interface van bots zoals Hogerlager is te vinden in Bot.java. 
+
+Processing aan de praat krijgen: een handleiding.
+MAAK VAN TEST EEN SOURCEFOLDER!!!1!
